@@ -1,2 +1,4 @@
 [testoptions]
 except_implementations=PyPy
+[VARIABLES]
+additional-builtins=__additional_builtin__
